# RSP-Online

./: README.md
client/: .gitignore  CMakeLists.txt  CMakeSettings.json  client.c
client/include/: account.h  webconn.h
client/src/: account.c  hash.c  webconn.c
server/: CMakeLists.txt  server.c  server.cpp  t.cpp  t.py  tt.py
server/include/: account.h  room.h  webconn.h
server/src/: account.cpp  room.cpp  webconn.cpp
